@@ -1492,6 +1492,7 @@
 				GCC_WARN_ABOUT_RETURN_TYPE = YES;
 				GCC_WARN_UNUSED_VARIABLE = YES;
 				ONLY_ACTIVE_ARCH = YES;
+				OTHER_CFLAGS = "-fvisibility=hidden";
 				PREBINDING = NO;
 				SDKROOT = iphoneos3.0;
 			};
@@ -1506,6 +1507,7 @@
 				GCC_C_LANGUAGE_STANDARD = c99;
 				GCC_WARN_ABOUT_RETURN_TYPE = YES;
 				GCC_WARN_UNUSED_VARIABLE = YES;
+				OTHER_CFLAGS = "-fvisibility=hidden";
 				PREBINDING = NO;
 				SDKROOT = iphoneos3.0;
 			};
